--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-font-awesome": "1.5.0",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
@@ -45,6 +46,7 @@
     "ember-radio-button": "1.0.7",
     "ember-resolver": "^2.0.3",
     "emberfire": "1.6.6",
-    "loader.js": "^4.0.1"
+    "loader.js": "^4.0.1",
+    "torii": "0.6.1"
   }
 }
